docs: 更新 README 为 JDK 8/17/21/25 四套运行时（原仅 17/21，已过时）